# OMPEval

./: CMakeLists.txt  advanced.py  benchmark.cpp  pyompeval.cpp  usage.py
omp/: CMakeLists.txt  EquityCalculator.cpp  EquityCalculator.h
